@@ -1,3 +1,11 @@
+2007-01-10  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Beth Dakin.
+        
+        Updated coding style guidelines to cover a lot of stuff previously absent.
+
+        * coding/coding-style.html:
+
 2007-01-04  Lars Naesbye Christensen  <larsnaesbye@stud.ku.dk>
 
         Reviewed by Darin.
